# aa-industry

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .stylelintignore  CHANGELOG.md  CONTRIBUTING-EN.md  LICENSE  Makefile  PRICING_LOGIC.md  PROPOSAL_ME_TE_RIGS.md  README.md  append_models.py  append_task.py  append_views.py  calculating_material.md  fix_migrations.py  fix_strings.py  fix_views.py  patch_isk.py  precommit_output.txt  precommit_output2.txt  precommit_output3.txt  precommit_output4.txt  precommit_output5.txt  precommit_output6.txt  precommit_output7.txt  pyproject.toml  refactor.py  rename_plugin.py  tox.ini  update_readme.py  user_manual_en.md
.github/workflows/: automated-checks.yml  release.yml
blob/main/: CHANGELOG.md
doc/: blueprint_materials_proposal.md
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  Discord-Implementation.md  PIMember.md  drildown_implementation_plan.md  git_push_handleiding.md  group_permissions_proposal.md  industry_plugin_advice.md  multilanguage_implementation.md  release_notes.md  user_manual_en.md  user_manual_nl.md  v0.1.0b5.release_notes.md
docs/Design/: implementation_plan.md  walkthrough.md
docs/domein1/: implementation_plan.md  walkthrough.md
docs/domein2/: implementation_plan.md  walkthrough.md
docs/domein3/: implementation_plan.md  walkthrough.md
industry/: __init__.py  admin.py  apps.py  auth_hooks.py  models.py  tasks.py  urls.py  views.py
industry/migrations/: 0001_initial.py  0002_alter_general_options_characterindustryjob_and_more.py  0003_characterplanet_planetpin.py  0004_planetpin_install_time.py  0005_corppricingconfig_memberorder_orderfit_orderitem_and_more.py  0006_alter_general_options_corpmotd_productiontask.py  0007_productiontask_bom_parent_productiontask_hidden_and_more.py  0008_alter_corphangarconfig_flag_id_and_more.py
industry/tests/: test_industry.py
industry/utils/: pricing_engine.py
industry_reforged/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  forms.py  models.py  tasks.py  urls.py  views.py
industry_reforged/doc/: release_notes_v0.1.0b2.md
industry_reforged/migrations/: 0002_alter_general_options_characterindustryjob_and_more.py  0003_characterplanet_planetpin.py  0004_planetpin_install_time.py  0005_corppricingconfig_memberorder_orderfit_orderitem_and_more.py  0006_alter_general_options_corpmotd_productiontask.py  0007_productiontask_bom_parent_productiontask_hidden_and_more.py  0008_alter_corphangarconfig_flag_id_and_more.py  0009_corpwalletdivision_corpwalletjournal.py  0010_planetpin_notification_sent.py  0011_corpitemconfig_last_low_stock_warning_and_more.py  0012_memberorder_accepted_at_memberorder_quoted_at.py  0013_corppricingconfig_builder_reward_percent_and_more.py  0014_corphangarconfig_is_active.py  0015_memberorder_is_paid_memberorder_payment_reference_and_more.py  0016_corporationwebhookconfig_directors_webhook.py  0017_taskexecutionlog.py  0019_industryfacility.py  0036_corpbuyorder.py  (+17 more)
(+59 files in other folders)
