[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-industry-reforged"
description = "Industry Plugin for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "industry_reforged",
]
license = { file = "LICENSE" }
authors = [
    { name = "Maddog Broekman", email = "maddogbroekman@gmail.com" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=5",
    "django-eveuniverse",
]
urls.Changelog = "https://github.com/mbroekman/aa-industry/blob/main/CHANGELOG.md"
urls.Homepage = "https://github.com/mbroekman/aa-industry"
urls.Source = "https://github.com/mbroekman/aa-industry"
urls.Tracker = "https://github.com/mbroekman/aa-industry/issues"

[tool.hatch]
version.path = "industry_reforged/__init__.py"
build.include = [
    "/industry_reforged",
]
